# sh2lang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  example.sh2  hello.sh  pipe_debug.sh  repro.sh  reproduce_pipe.sh  sh2lang.asc  tee_race_fix.sh  tee_race_fix_2.sh  tee_race_fix_trap.sh  tee_race_test.sh
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
docs/: _config.yml  codegen-safety.md  editor_keywords.md  feature_matrix.md  grammar.ebnf  index.md  language.md  release_v0.1.0.md  robots.txt  sh2_vs_shell.md  sh2do.md
public/: gpg.key  sh2lang.asc
sh2c/: Cargo.toml
sh2do/: Cargo.toml
sh2lang-pkg/: Cargo.toml
sh2lang-pkg/src/: lib.rs
src/: ast.rs  codegen.rs  diag_path.rs  error.rs  formatter.rs  ir.rs  lexer.rs  lib.rs  loader.rs  lower.rs  main.rs  parser.rs  span.rs  target.rs
tests/: case_tests.rs  ci_posix_shell_matrix.rs  cli_args.rs  cli_compile_errors.rs  cli_help_usage.rs  cli_introspection_flags.rs  cli_no_diagnostics.rs  cli_out_mode.rs  cli_target.rs  codegen.rs  codegen_shell_c_safety.rs  codegen_shell_c_source_lint.rs  command_sub_tests.rs  compare_tests.rs  concat_tests.rs  control_flow_tests.rs  diagnostics_parse_errors.rs  diagnostics_runtime.rs  diagnostics_spans.rs  editor_artifacts.rs  exec.rs  exit_tests.rs  for_loop_tests.rs  formatter.rs  json_regression.rs  let_tests.rs  parse.rs  parser.rs  pipe_tests.rs  posix_compat_lints.rs  regression_codegen.rs  return_tests.rs  stdlib_conformance.rs  syntax_and_or_stmt.rs  syntax_argc_argv0_basic.rs  syntax_args_ops.rs  (+108 more)
(+2686 files in other folders)
