[package]
name = "sh2c"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "sh2c"
path = "src/lib.rs"

[[bin]]
name = "sh2c"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
assert_cmd = "2.1.1"
lazy_static = "1.5.0"
predicates = "3.1.3"
serde_json = "1.0"
tempfile = "3.24.0"
